<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"    
    android:layout_height="fill_parent"
    android:background="@color/background">   
    
    <ScrollView android:id="@+id/scrollview"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">    
		
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"    
		    android:layout_height="wrap_content"
		    android:paddingLeft="10dip"
		    android:paddingRight="10dip"
		    android:layout_alignParentTop="true">        
	         	
	        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    
		        android:orientation="horizontal"	
		        android:layout_marginBottom="15dip"	      
			    android:layout_width="fill_parent"    
			    android:layout_height="wrap_content"> 			    			    
			    <ImageView
			         android:id="@+id/oikos_logo"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_gravity="left"
			         android:gravity="left"
		         	 android:src="@drawable/oikos_logo"/> 		         	 
		        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    
			        android:orientation="horizontal"		
			        android:layout_gravity="right"
			        android:gravity="right"
			        android:paddingTop="5dip"      
				    android:layout_width="fill_parent"    
				    android:layout_height="wrap_content"> 
			         <ImageButton
				         android:id="@+id/preferences_btn"
				         android:layout_width="wrap_content"
				         android:layout_height="wrap_content"				      
			         	 android:background="@drawable/preferences_icon_style"/>   		         	
			         <ImageButton
				         android:id="@+id/info_btn"
				         android:layout_width="wrap_content"
				         android:layout_height="wrap_content"	
			         	 android:background="@drawable/info_icon_style"/>    
		         </LinearLayout>	
	        </LinearLayout>
	         	         	
	       	<TextView
	       		android:id="@+id/txtview_iwant"
	       		android:textSize="14dip"
			   	android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"		   	
			   	android:text="@string/iwant"
			   	android:textColor="@color/text_color"			  	  
			   	android:paddingBottom="2dip"
			   	android:layout_gravity="left"
		        android:gravity="left"/>
		    <EditText 
		    	android:id="@+id/edittxt_message" 
		    	android:textSize="17dip"
		    	android:textColor="#000000"		    
		    	android:hint = "@string/message_hint"
			   	android:layout_width="fill_parent"
			  	android:layout_height="wrap_content"
			  	android:singleLine="false" 
			  	android:lines="2"
			  	android:layout_gravity="left"
		        android:gravity="left"/>		        
		    <TextView
	       		android:id="@+id/txtview_available"
	       		android:textSize="14dip"
			   	android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"		   	
			   	android:text="@string/available"
			   	android:textColor="@color/text_color"			  
			   	android:paddingBottom="2dip"
			   	android:layout_gravity="left"
		        android:gravity="left"/>
		        
		     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    
		        android:orientation="horizontal"	     
			    android:layout_width="fill_parent"    
			    android:layout_height="wrap_content"> 			
			    <EditText 
			    	android:id="@+id/store_edittxt" 
			    	android:textSize="17dip"
			    	android:visibility="gone"
			    	android:hint = "@string/store_hint"
				   	android:layout_width="wrap_content"
				  	android:layout_height="wrap_content"
				  	android:layout_gravity="left"
			        android:gravity="left"/>		 
				<Spinner
					android:prompt="@string/select_shop"
				    android:id="@+id/shops_spn"
				    android:background="@android:color/transparent" 
				    android:cacheColorHint="#00000000" 
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"/>
			    <ImageButton
			         android:id="@+id/select_shop_btn"
			         android:visibility="visible"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_marginLeft="5dip"
			         android:layout_gravity="center_vertical"
			         android:gravity="center_vertical"
		         	 android:background="@drawable/drop_down_arrow_style"/> 	    
			 </LinearLayout> 
		        
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    
		        android:orientation="horizontal"	    
			    android:layout_width="fill_parent"    
			    android:layout_height="wrap_content"> 
				<Spinner				
					android:prompt="@string/select_county"
				    android:id="@+id/counties_spn"
				    android:drawSelectorOnTop="true"
				    android:background="@android:color/transparent" 
				    android:cacheColorHint="#00000000" 
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"/>					    
				 <ImageButton
			         android:id="@+id/select_county_btn"
			         android:visibility="visible"			         
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_marginLeft="5dip"
			         android:layout_gravity="center_vertical"
			         android:gravity="center_vertical"
		         	 android:background="@drawable/drop_down_arrow_style"/> 	
		    </LinearLayout>
	         
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    
		        android:orientation="horizontal"	     
			    android:layout_width="fill_parent"    
			    android:layout_height="wrap_content"> 	
				<EditText 
			    	android:id="@+id/edittxt_place" 
			    	android:textSize="17dip"
			    	android:visibility="gone"
			    	android:hint = "@string/place_hint"
				   	android:layout_width="wrap_content"
				  	android:layout_height="wrap_content"
				  	android:layout_gravity="left"
			        android:gravity="left"/>	
				    
				<Spinner
					android:prompt="@string/select_place"
				    android:id="@+id/places_spn"
				    android:background="@android:color/transparent" 
				    android:cacheColorHint="#00000000" 
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"/>	
				    
				<ImageButton
			         android:id="@+id/select_place_btn"
			         android:visibility="visible"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:layout_marginLeft="5dip"
			         android:layout_gravity="center_vertical"
			         android:gravity="center_vertical"
		         	 android:background="@drawable/drop_down_arrow_style"/> 	         	 			    
			</LinearLayout>
			 
			 <Button 
			    android:layout_marginTop="40dip"
			    android:layout_marginLeft="10dip"
			    android:layout_marginRight="10dip"
			    android:textSize="17dip"
			    android:textColor="#FFFFFF"
			 	android:id="@+id/btn_send_request"
			 	android:text="@string/send_request" 		 	
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:background="@drawable/button_bg"
				android:layout_alignParentBottom="true"/> 		
		 </LinearLayout> 
	</ScrollView>
</LinearLayout>